array.island.Island.scala.error
Compilation error:
Island:3: error: not found: value num
var o=num(0)
      ^