array.island.Island.scala.code
var temp: Int=0
var o=num(0)

def island(num:Array[Int]): Int = {
  for(i<- 1 to num.length){
    if(o<num(i)){
      o=num(i)
      temp=temp+1
    }else{
      if(o>num(i)){
        o=num(i)
      }
    }
  }
  return temp
  
}